Prevent title overflow in Mirador 4

--- a/app/assets/stylesheets/mirador.css
+++ b/app/assets/stylesheets/mirador.css
@@ -2,6 +2,10 @@
   --gray-80: #ccc;
 }
 
+.mirador-viewer {
+  width: 100%;
+}
+
 .mosaic-root {
   bottom: 0 !important;
   left: 0 !important;
@@ -29,7 +33,7 @@
   margin: 0 1px 3px 0;
   position: relative;
 
-  /* For single-window Mirador embeds, this will be overriden by Mirador 3's
+  /* For single-window Mirador embeds, this will be overriden by Mirador's
      selected window top-bar styling, but if there are mulitple
      windows, it will give the unselected windows a visible border. */
   .mirador-window-top-bar {
